syntax = "proto3";

package access_v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

option go_package = "github.com/astronely/financial-helper_microservices/pkg/access_v1;access_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Access API"
    version: "1.0.0"
    contact: {
      name: "astronely"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service AccessV1 {
  rpc Check(CheckRequest) returns (CheckResponse) {
    option (google.api.http) = {
      get: "/user/v1/check"
    };
  };
}

message CheckRequest {
  string endpoint_address = 1;
}

message CheckResponse {
  bool is_allowed = 1;
}
